[gd_scene load_steps=3 format=3 uid="uid://dvodt1io6a66w"]

[ext_resource type="Script" path="res://Script/ReadyScreen.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://dd5jgtf8mloay" path="res://Scene/PeerStatus.tscn" id="2"]

[node name="ReadyScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -199.0
offset_top = -85.0
offset_right = 234.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2

[node name="MatchIDContainer" type="Control" parent="Panel"]
anchors_preset = 0
offset_right = 287.0
offset_bottom = 24.0

[node name="MatchID" type="Label" parent="Panel/MatchIDContainer"]
layout_mode = 0
offset_left = 3.0
offset_top = 6.0
offset_right = 65.0
offset_bottom = 20.0
text = "Match ID:"

[node name="MatchIDText" type="LineEdit" parent="Panel/MatchIDContainer"]
layout_mode = 0
offset_left = 83.0
offset_right = 428.0
offset_bottom = 31.0

[node name="StatusContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 9.0
offset_top = 34.0
offset_right = 388.0
offset_bottom = 141.0

[node name="PeerStatus" parent="Panel/StatusContainer" instance=ExtResource("2")]
layout_mode = 2

[node name="ReadyButton" type="Button" parent="Panel"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.5
offset_top = 63.0
offset_right = 44.5
offset_bottom = 83.0
text = "Ready"

[node name="BackButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 364.0
offset_top = 164.0
offset_right = 432.0
offset_bottom = 195.0
text = "Quit"

[node name="DisplayTimerDisconneted" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 1.0
offset_top = 150.0
offset_right = 77.0
offset_bottom = 170.0

[connection signal="pressed" from="Panel/ReadyButton" to="." method="_on_ready_button_pressed"]
[connection signal="pressed" from="Panel/BackButton" to="." method="_on_BackButton_pressed"]
